update docker files

--- a/.env.example
+++ b/.env.example
@@ -58,6 +58,12 @@ OPENCLAW_GATEWAY_TOKEN=change-me-to-a-long-random-token
 # ZALO_BOT_TOKEN=...
 # OPENCLAW_TWITCH_ACCESS_TOKEN=oauth:...
 
+# WhatsApp via Kapso.ai (webhook-based, no pairing required)
+# Remote-code URL (where OpenClaw sends responses to be forwarded to Kapso)
+# REMOTE_CODE_URL=https://cloud.blackbox.ai
+# Webhook secret for authentication with remote-code
+# OPENCLAW_WEBHOOK_SECRET=change-me-to-a-long-random-secret
+
 # -----------------------------------------------------------------------------
 # Tools + voice/media (optional)
 # -----------------------------------------------------------------------------
